--- a/src/components/meme/meme.css
+++ b/src/components/meme/meme.css
@@ -45,3 +45,49 @@
 .btn:hover {
     opacity: 0.9;
 }
+
+.meme-img-div {
+    text-align: center;
+    position: relative;
+}
+
+.meme-img {
+    height: 400px;
+    width: 700px;
+    text-align: center;
+    align-items: center;
+
+}
+
+.meme--text {
+    position: absolute;
+    width: 80%;
+    text-align: center;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 15px 0;
+    padding: 0 5px;
+    font-family: impact, sans-serif;
+    font-size: 2em;
+    text-transform: uppercase;
+    color: white;
+    letter-spacing: 1px;
+    text-shadow:
+        2px 2px 0 #000,
+        -2px -2px 0 #000,
+        2px -2px 0 #000,
+        -2px 2px 0 #000,
+        0 2px 0 #000,
+        2px 0 0 #000,
+        0 -2px 0 #000,
+        -2px 0 0 #000,
+        2px 2px 5px #000;
+}
+
+.bottom {
+    bottom: 0;
+}
+
+.top {
+    top: 0;
+}
